--- a/sfdx-project.json
+++ b/sfdx-project.json
@@ -75,25 +75,21 @@
             "default": false,
             "dependencies": [
                 {
-                    "package": "apex-rollup@1.5.9-0"
+                    "package": "apex-rollup@1.5.10-0"
                 }
             ]
         }
     ],
     "namespace": "",
     "sfdcLoginUrl": "https://login.salesforce.com",
-    "sourceApiVersion": "54.0",
+    "sourceApiVersion": "55.0",
     "packageAliases": {
         "Apex Rollup - Custom Logger": "0Ho6g000000Gn8ZCAS",
-        "Apex Rollup - Custom Logger@0.0.10-0": "04t6g000008SijqAAC",
         "Apex Rollup - Custom Logger@0.0.11-0": "04t6g000008SirvAAC",
         "Apex Rollup - Custom Logger@0.0.12-0": "04t6g000008SjqIAAS",
         "Apex Rollup - Extra Code Coverage": "0Ho6g000000GnCWCA0",
-        "Apex Rollup - Extra Code Coverage@0.0.8-0": "04t6g000008SjuzAAC",
-        "Apex Rollup - Extra Code Coverage@0.0.9-0": "04t6g000008Sk13AAC",
-        "Apex Rollup - Extra Code Coverage@0.0.10-0": "04t6g000008Sk7gAAC",
         "Apex Rollup - Extra Code Coverage@0.0.11-0": "04t6g000008SkNaAAK",
-        "Apex Rollup - Extra Code Coverage@0.0.12-0": "04t6g000008SkVAAA0",
+        "Apex Rollup - Extra Code Coverage@0.0.12-0": "04t6g000008SkVZAA0",
         "Apex Rollup - Nebula Logger": "0Ho6g000000Gn8PCAS",
         "Apex Rollup - Nebula Logger@0.0.5-0": "04t6g000008Si1BAAS",
         "Apex Rollup - Nebula Logger@0.0.6-0": "04t6g000008SiisAAC",
@@ -102,15 +98,10 @@
         "Apex Rollup - Rollup Callback@0.0.3-0": "04t6g000008Sis0AAC",
         "Nebula Logger - Unlocked Package@4.5.2-0-plugin-framework-enhancements": "04t5Y0000027FNaQAM",
         "apex-rollup": "0Ho6g000000TNcOCAW",
-        "apex-rollup@1.5.0-0": "04t6g000008Sk8FAAS",
-        "apex-rollup@1.5.1-0": "04t6g000008Sk8KAAS",
-        "apex-rollup@1.5.2-0": "04t6g000008Sk93AAC",
-        "apex-rollup@1.5.3-0": "04t6g000008SkBEAA0",
-        "apex-rollup@1.5.4-0": "04t6g000008SkJdAAK",
-        "apex-rollup@1.5.5-0": "04t6g000008SkKqAAK",
         "apex-rollup@1.5.6-0": "04t6g000008SkMhAAK",
         "apex-rollup@1.5.7-0": "04t6g000008SkNkAAK",
         "apex-rollup@1.5.8-0": "04t6g000008SkRSAA0",
-        "apex-rollup@1.5.9-0": "04t6g000008SkVFAA0"
+        "apex-rollup@1.5.9-0": "04t6g000008SkVFAA0",
+        "apex-rollup@1.5.10-0": "04t6g000008SkVUAA0"
     }
 }
