Adding git tag creation to build script upon merge to main

--- a/sfdx-project.json
+++ b/sfdx-project.json
@@ -4,8 +4,8 @@
             "default": true,
             "package": "apex-rollup",
             "path": "rollup",
-            "versionName": "Process improvements, fixed an issue where rollups started from parents could have old fields persisted.",
-            "versionNumber": "1.5.12.0",
+            "versionName": "Pipeline now automatically creates git tag",
+            "versionNumber": "1.5.13.0",
             "versionDescription": "Fast, configurable, elastically scaling custom rollup solution. Apex Invocable action, one-liner Apex trigger/CMDT-driven logic, and scheduled Apex-ready.",
             "releaseNotesUrl": "https://github.com/jamessimone/apex-rollup/releases/latest",
             "unpackagedMetadata": {
