--- a/sfdx-project.json
+++ b/sfdx-project.json
@@ -4,8 +4,8 @@
             "default": true,
             "package": "apex-rollup",
             "path": "rollup",
-            "versionName": "Fixed an issue with 1.5.14 where not all queries produced by REFRESH rollups were valid due to paranthetical nesting",
-            "versionNumber": "1.5.15.0",
+            "versionName": "Only reset parent-level rollup fields in full recalcs from the app",
+            "versionNumber": "1.5.16.0",
             "versionDescription": "Fast, configurable, elastically scaling custom rollup solution. Apex Invocable action, one-liner Apex trigger/CMDT-driven logic, and scheduled Apex-ready.",
             "releaseNotesUrl": "https://github.com/jamessimone/apex-rollup/releases/latest",
             "unpackagedMetadata": {
@@ -107,6 +107,7 @@
         "apex-rollup@1.5.12-0": "04t6g000008SkXfAAK",
         "apex-rollup@1.5.13-0": "04t6g000008SkaAAAS",
         "apex-rollup@1.5.14-0-do-not-use": "04t6g000008SkfkAAC",
-        "apex-rollup@1.5.15-0": "04t6g000008Skg4AAC"
+        "apex-rollup@1.5.15-0": "04t6g000008Skg4AAC",
+        "apex-rollup@1.5.16-0": "04t6g000008SklPAAS"
     }
 }
