--- a/sfdx-project.json
+++ b/sfdx-project.json
@@ -4,8 +4,8 @@
             "default": true,
             "package": "apex-rollup",
             "path": "rollup",
-            "versionName": "Fixes an issue in RollupEvaluator where large inner paranthetical where clauses were being split incorrectly",
-            "versionNumber": "1.5.18.0",
+            "versionName": "Adds ALL, ANY, NONE rollup operations. Bugfixes for MOST",
+            "versionNumber": "1.5.19.0",
             "versionDescription": "Fast, configurable, elastically scaling custom rollup solution. Apex Invocable action, one-liner Apex trigger/CMDT-driven logic, and scheduled Apex-ready.",
             "releaseNotesUrl": "https://github.com/jamessimone/apex-rollup/releases/latest",
             "unpackagedMetadata": {
