Updating sfdx-project.json to remove old package versions and update version description with change from ANY -> SOME since ANY is a reserved keyword in Apex

--- a/sfdx-project.json
+++ b/sfdx-project.json
@@ -4,7 +4,7 @@
             "default": true,
             "package": "apex-rollup",
             "path": "rollup",
-            "versionName": "Adds ALL, ANY, NONE rollup operations. Bugfixes for MOST",
+            "versionName": "Adds ALL, SOME, NONE rollup operations. Bugfixes for MOST",
             "versionNumber": "1.5.19.0",
             "versionDescription": "Fast, configurable, elastically scaling custom rollup solution. Apex Invocable action, one-liner Apex trigger/CMDT-driven logic, and scheduled Apex-ready.",
             "releaseNotesUrl": "https://github.com/jamessimone/apex-rollup/releases/latest",
@@ -88,7 +88,6 @@
         "Apex Rollup - Custom Logger@0.0.11-0": "04t6g000008SirvAAC",
         "Apex Rollup - Custom Logger@0.0.12-0": "04t6g000008SjqIAAS",
         "Apex Rollup - Extra Code Coverage": "0Ho6g000000GnCWCA0",
-        "Apex Rollup - Extra Code Coverage@0.0.11-0": "04t6g000008SkNaAAK",
         "Apex Rollup - Extra Code Coverage@0.0.12-0": "04t6g000008SkVZAA0",
         "Apex Rollup - Nebula Logger": "0Ho6g000000Gn8PCAS",
         "Apex Rollup - Nebula Logger@0.0.5-0": "04t6g000008Si1BAAS",
@@ -98,15 +97,6 @@
         "Apex Rollup - Rollup Callback@0.0.3-0": "04t6g000008Sis0AAC",
         "Nebula Logger - Unlocked Package@4.5.2-0-plugin-framework-enhancements": "04t5Y0000027FNaQAM",
         "apex-rollup": "0Ho6g000000TNcOCAW",
-        "apex-rollup@1.5.6-0": "04t6g000008SkMhAAK",
-        "apex-rollup@1.5.7-0": "04t6g000008SkNkAAK",
-        "apex-rollup@1.5.8-0": "04t6g000008SkRSAA0",
-        "apex-rollup@1.5.9-0": "04t6g000008SkVFAA0",
-        "apex-rollup@1.5.10-0": "04t6g000008SkVeAAK",
-        "apex-rollup@1.5.11-0": "04t6g000008SkWhAAK",
-        "apex-rollup@1.5.12-0": "04t6g000008SkXfAAK",
-        "apex-rollup@1.5.13-0": "04t6g000008SkaAAAS",
-        "apex-rollup@1.5.14-0-do-not-use": "04t6g000008SkfkAAC",
         "apex-rollup@1.5.15-0": "04t6g000008Skg4AAC",
         "apex-rollup@1.5.16-0": "04t6g000008SklPAAS",
         "apex-rollup@1.5.17-0": "04t6g000008SkuIAAS",
