Switching up how full recalculator rollups get re-enqueued to try to diagnose an issue reported by Katherine West

--- a/sfdx-project.json
+++ b/sfdx-project.json
@@ -102,6 +102,6 @@
         "apex-rollup@1.5.16-0": "04t6g000008SklPAAS",
         "apex-rollup@1.5.17-0": "04t6g000008SkuIAAS",
         "apex-rollup@1.5.18-0": "04t6g000008SkucAAC",
-        "apex-rollup@1.5.19-0": "04t6g000008SkvfAAC"
+        "apex-rollup@1.5.19-0": "04t6g000008SkwiAAC"
     }
 }
