--- a/sfdx-project.json
+++ b/sfdx-project.json
@@ -102,6 +102,7 @@
         "apex-rollup@1.5.16-0": "04t6g000008SklPAAS",
         "apex-rollup@1.5.17-0": "04t6g000008SkuIAAS",
         "apex-rollup@1.5.18-0": "04t6g000008SkucAAC",
-        "apex-rollup@1.5.19-0": "04t6g000008SkwxAAC"
+        "apex-rollup@1.5.19-0": "04t6g000008SkwxAAC",
+        "apex-rollup@1.5.20-0": "04t6g000008Sl4TAAS"
     }
 }
