--- a/sfdx-project.json
+++ b/sfdx-project.json
@@ -4,7 +4,7 @@
             "default": true,
             "package": "apex-rollup",
             "path": "rollup",
-            "versionName": "Swapped from Type.forName to Schema.describeSObjects where appropriate to save on speed",
+            "versionName": "Swapped from Type.forName to Schema.describeSObjects where appropriate to save on speed, fixed issue where not all hierarchy rollups got CurrencyIsoCode correctly in multi-currency orgs, many optimizations.",
             "versionNumber": "1.5.20.0",
             "versionDescription": "Fast, configurable, elastically scaling custom rollup solution. Apex Invocable action, one-liner Apex trigger/CMDT-driven logic, and scheduled Apex-ready.",
             "releaseNotesUrl": "https://github.com/jamessimone/apex-rollup/releases/latest",
@@ -23,10 +23,7 @@
             "versionNumber": "0.0.12.0",
             "versionName": "Corrected assertion in one of the custom logger tests",
             "versionDescription": "Adds RollupLog__c and RollupLogEntry__c custom objects to allow storage of rollup debug logs",
-            "default": false,
-            "unpackagedMetadata": {
-                "path": "plugins/CustomObjectRollupLogger/tests"
-            }
+            "default": false
         },
         {
             "package": "Apex Rollup - Nebula Logger",
@@ -36,16 +33,13 @@
                     "package": "apex-rollup@1.3.22-0"
                 },
                 {
-                    "package": "Nebula Logger - Unlocked Package@4.5.2-0-plugin-framework-enhancements"
+                    "package": "Nebula Logger - Core@4.8.0-NEXT-ignore-origin-method"
                 }
             ],
-            "versionNumber": "0.0.6.0",
+            "versionNumber": "0.0.7.0",
             "versionName": "Adding base Rollup string and version number",
             "versionDescription": "Provides an adapter that hooks rollup debug logging up to Nebula Logger",
-            "default": false,
-            "unpackagedMetadata": {
-                "path": "plugins/NebulaLogger/tests"
-            }
+            "default": false
         },
         {
             "package": "Apex Rollup - Rollup Callback",
@@ -58,10 +52,7 @@
             "versionNumber": "0.0.3.0",
             "versionName": "Standardizing plugin infrastructure",
             "versionDescription": "Use this plugin to dispatch updated rollup information using Platform Events or custom Apex",
-            "default": false,
-            "unpackagedMetadata": {
-                "path": "plugins/RollupCallback/tests"
-            }
+            "default": false
         },
         {
             "path": "extra-tests",
@@ -91,12 +82,12 @@
         "Apex Rollup - Extra Code Coverage@0.0.12-0": "04t6g000008SkVZAA0",
         "Apex Rollup - Extra Code Coverage@0.0.13-0": "04t6g000008SkvLAAS",
         "Apex Rollup - Nebula Logger": "0Ho6g000000Gn8PCAS",
-        "Apex Rollup - Nebula Logger@0.0.5-0": "04t6g000008Si1BAAS",
         "Apex Rollup - Nebula Logger@0.0.6-0": "04t6g000008SiisAAC",
+        "Apex Rollup - Nebula Logger@0.0.7-0": "04t6g000008b0JfAAI",
         "Apex Rollup - Rollup Callback": "0Ho6g000000GnA1CAK",
         "Apex Rollup - Rollup Callback@0.0.2-0": "04t6g000008ShztAAC",
         "Apex Rollup - Rollup Callback@0.0.3-0": "04t6g000008Sis0AAC",
-        "Nebula Logger - Unlocked Package@4.5.2-0-plugin-framework-enhancements": "04t5Y0000027FNaQAM",
+        "Nebula Logger - Core@4.8.0-NEXT-ignore-origin-method": "04t5Y0000015lslQAA",
         "apex-rollup": "0Ho6g000000TNcOCAW",
         "apex-rollup@1.5.15-0": "04t6g000008Skg4AAC",
         "apex-rollup@1.5.16-0": "04t6g000008SklPAAS",
