Full recalcs no longer try to re-queue when already in an async context

--- a/sfdx-project.json
+++ b/sfdx-project.json
@@ -98,11 +98,12 @@
         "Apex Rollup - Rollup Callback@0.0.3-0": "04t6g000008Sis0AAC",
         "Nebula Logger - Core@4.8.0-NEXT-ignore-origin-method": "04t5Y0000015lslQAA",
         "apex-rollup": "0Ho6g000000TNcOCAW",
+        "apex-rollup@1.3.22-0": "04t6g000008SijvAAC",
         "apex-rollup@1.5.15-0": "04t6g000008Skg4AAC",
         "apex-rollup@1.5.16-0": "04t6g000008SklPAAS",
         "apex-rollup@1.5.17-0": "04t6g000008SkuIAAS",
         "apex-rollup@1.5.18-0": "04t6g000008SkucAAC",
         "apex-rollup@1.5.19-0": "04t6g000008SkwxAAC",
-        "apex-rollup@1.5.20-0": "04t6g000008b0A7AAI"
+        "apex-rollup@1.5.20-0": "04t6g000008b0JkAAI"
     }
 }
