--- a/sfdx-project.json
+++ b/sfdx-project.json
@@ -33,7 +33,7 @@
             "path": "plugins\\NebulaLogger",
             "dependencies": [
                 {
-                    "package": "apex-rollup@1.3.22-0"
+                    "package": "apex-rollup@1.5.20-0"
                 },
                 {
                     "package": "Nebula Logger - Core@4.8.0-NEXT-ignore-origin-method"
@@ -92,13 +92,12 @@
         "Apex Rollup - Extra Code Coverage@0.0.13-0": "04t6g000008SkvLAAS",
         "Apex Rollup - Nebula Logger": "0Ho6g000000Gn8PCAS",
         "Apex Rollup - Nebula Logger@0.0.6-0": "04t6g000008SiisAAC",
-        "Apex Rollup - Nebula Logger@0.0.7-0": "04t6g000008b0JfAAI",
+        "Apex Rollup - Nebula Logger@0.0.7-0": "04t6g000008b0O7AAI",
         "Apex Rollup - Rollup Callback": "0Ho6g000000GnA1CAK",
         "Apex Rollup - Rollup Callback@0.0.2-0": "04t6g000008ShztAAC",
         "Apex Rollup - Rollup Callback@0.0.3-0": "04t6g000008Sis0AAC",
         "Nebula Logger - Core@4.8.0-NEXT-ignore-origin-method": "04t5Y0000015lslQAA",
         "apex-rollup": "0Ho6g000000TNcOCAW",
-        "apex-rollup@1.3.22-0": "04t6g000008SijvAAC",
         "apex-rollup@1.5.15-0": "04t6g000008Skg4AAC",
         "apex-rollup@1.5.16-0": "04t6g000008SklPAAS",
         "apex-rollup@1.5.17-0": "04t6g000008SkuIAAS",
