--- a/sfdx-project.json
+++ b/sfdx-project.json
@@ -103,6 +103,7 @@
         "apex-rollup@1.5.17-0": "04t6g000008SkuIAAS",
         "apex-rollup@1.5.18-0": "04t6g000008SkucAAC",
         "apex-rollup@1.5.19-0": "04t6g000008SkwxAAC",
-        "apex-rollup@1.5.20-0": "04t6g000008b0ObAAI"
+        "apex-rollup@1.5.20-0": "04t6g000008b0ObAAI",
+        "apex-rollup@1.5.21-0": "04t6g000008b0RGAAY"
     }
 }
