--- a/rollup-namespaced/sfdx-project.json
+++ b/rollup-namespaced/sfdx-project.json
@@ -8,13 +8,17 @@
             "versionNumber": "1.0.0.0",
             "versionDescription": "Fast, configurable, elastically scaling custom rollup solution. Apex Invocable action, one-liner Apex trigger/CMDT-driven logic, and scheduled Apex-ready.",
             "releaseNotesUrl": "https://github.com/jamessimone/apex-rollup/releases/latest"
+        },
+        {
+            "path": "extra-tests",
+            "default": false
         }
     ],
-    "namespace": "aproll",
+    "namespace": "please",
     "sfdcLoginUrl": "https://login.salesforce.com",
     "sourceApiVersion": "55.0",
     "packageAliases": {
-        "apex-rollup-namespaced": "0Ho6g000000PBMeCAO",
-        "apex-rollup-namespaced@1.0.0-0": "04t6g000008b0QNAAY"
+        "apex-rollup-namespaced": "0Ho6g000000PBMjCAO",
+        "apex-rollup-namespaced@1.0.0-0": "04t6g000008b0RVAAY"
     }
 }
