--- a/sfdx-project.json
+++ b/sfdx-project.json
@@ -104,6 +104,6 @@
         "apex-rollup@1.5.18-0": "04t6g000008SkucAAC",
         "apex-rollup@1.5.19-0": "04t6g000008SkwxAAC",
         "apex-rollup@1.5.20-0": "04t6g000008b0ObAAI",
-        "apex-rollup@1.5.21-0": "04t6g000008b0RGAAY"
+        "apex-rollup@1.5.21-0": "04t6g000008b0RQAAY"
     }
 }
