--- a/sfdx-project.json
+++ b/sfdx-project.json
@@ -4,8 +4,8 @@
             "default": true,
             "package": "apex-rollup",
             "path": "rollup",
-            "versionName": "Further optimizations for full recalc rollup code paths by removing an intermediate inner class. Fixed two issues reported by solo-1234 with full recalcs and Rollup Order Bys",
-            "versionNumber": "1.5.24.0",
+            "versionName": "Logging infrastructure improvements, decrease in heap size for Invocable usage with large record collection sizes",
+            "versionNumber": "1.5.25.0",
             "versionDescription": "Fast, configurable, elastically scaling custom rollup solution. Apex Invocable action, one-liner Apex trigger/CMDT-driven logic, and scheduled Apex-ready.",
             "releaseNotesUrl": "https://github.com/jamessimone/apex-rollup/releases/latest",
             "unpackagedMetadata": {
@@ -107,6 +107,7 @@
         "apex-rollup@1.5.21-0": "04t6g000008b0RpAAI",
         "apex-rollup@1.5.22-0": "04t6g000008b0XjAAI",
         "apex-rollup@1.5.23-0": "04t6g000008b0YSAAY",
-        "apex-rollup@1.5.24-0": "04t6g000008b0Z6AAI"
+        "apex-rollup@1.5.24-0": "04t6g000008b0Z6AAI",
+        "apex-rollup@1.5.25-0": "04t6g000008b0a9AAA"
     }
 }
