--- a/rollup-namespaced/sfdx-project.json
+++ b/rollup-namespaced/sfdx-project.json
@@ -18,6 +18,6 @@
     "sourceApiVersion": "55.0",
     "packageAliases": {
         "apex-rollup-namespaced": "0Ho6g000000PBMjCAO",
-        "apex-rollup-namespaced@1.0.0-0": "04t6g000008b0RzAAI"
+        "apex-rollup-namespaced@1.0.0-0": "04t6g000008b0huAAA"
     }
 }
