--- a/sfdx-project.json
+++ b/sfdx-project.json
@@ -4,8 +4,8 @@
             "default": true,
             "package": "apex-rollup",
             "path": "rollup",
-            "versionName": "THIS_FISCAL_QUARTER date literal bugfix, FIRST/LAST now use default recalc values properly",
-            "versionNumber": "1.5.31.0",
+            "versionName": "Namespaced package bugfix for full recalc app",
+            "versionNumber": "1.5.32.0",
             "versionDescription": "Fast, configurable, elastically scaling custom rollup solution. Apex Invocable action, one-liner Apex trigger/CMDT-driven logic, and scheduled Apex-ready.",
             "releaseNotesUrl": "https://github.com/jamessimone/apex-rollup/releases/latest",
             "unpackagedMetadata": {
@@ -103,6 +103,7 @@
         "apex-rollup@1.5.28-0": "04t6g000008b0inAAA",
         "apex-rollup@1.5.29-0": "04t6g000008b0nFAAQ",
         "apex-rollup@1.5.30-0": "04t6g000007zLnjAAE",
-        "apex-rollup@1.5.31-0": "04t6g000007zLpGAAU"
+        "apex-rollup@1.5.31-0": "04t6g000007zLpGAAU",
+        "apex-rollup@1.5.32-0": "04t6g000007zLuvAAE"
     }
 }
