--- a/rollup-namespaced/sfdx-project.json
+++ b/rollup-namespaced/sfdx-project.json
@@ -4,8 +4,8 @@
             "default": true,
             "package": "apex-rollup-namespaced",
             "path": "rollup-namespaced/source/rollup",
-            "versionName": "THIS_FISCAL_QUARTER date literal bugfix, FIRST/LAST now use default recalc values properly",
-            "versionNumber": "1.0.4.0",
+            "versionName": "Namespaced package bugfix for full recalc app",
+            "versionNumber": "1.0.5.0",
             "versionDescription": "Fast, configurable, elastically scaling custom rollup solution. Apex Invocable action, one-liner Apex trigger/CMDT-driven logic, and scheduled Apex-ready.",
             "releaseNotesUrl": "https://github.com/jamessimone/apex-rollup/releases/latest",
             "unpackagedMetadata": {
@@ -25,6 +25,7 @@
         "apex-rollup-namespaced@1.0.1-0": "04t6g000008b0isAAA",
         "apex-rollup-namespaced@1.0.2-0": "04t6g000008b0nKAAQ",
         "apex-rollup-namespaced@1.0.3-0": "04t6g000007zLnoAAE",
-        "apex-rollup-namespaced@1.0.4-0": "04t6g000007zLpLAAU"
+        "apex-rollup-namespaced@1.0.4-0": "04t6g000007zLpLAAU",
+        "apex-rollup-namespaced@1.0.5-0": "04t6g000007zLqEAAU"
     }
 }
