--- a/sfdx-project.json
+++ b/sfdx-project.json
@@ -4,8 +4,8 @@
             "default": true,
             "package": "apex-rollup",
             "path": "rollup",
-            "versionName": "Continued full recalc efficiencies ...",
-            "versionNumber": "1.5.35.0",
+            "versionName": "Cutting even more time off of full recalculations",
+            "versionNumber": "1.5.36.0",
             "versionDescription": "Fast, configurable, elastically scaling custom rollup solution. Apex Invocable action, one-liner Apex trigger/CMDT-driven logic, and scheduled Apex-ready.",
             "releaseNotesUrl": "https://github.com/jamessimone/apex-rollup/releases/latest",
             "unpackagedMetadata": {
@@ -39,7 +39,7 @@
                     "package": "Nebula Logger - Core@4.8.0-NEXT-ignore-origin-method"
                 }
             ],
-            "versionNumber": "0.0.7.0",
+            "versionNumber": "0.0.8.0",
             "versionName": "Adding base Rollup string and version number",
             "versionDescription": "Provides an adapter that hooks rollup debug logging up to Nebula Logger",
             "default": false,
@@ -92,21 +92,16 @@
         "Apex Rollup - Extra Code Coverage@0.0.13-0": "04t6g000008SkvLAAS",
         "Apex Rollup - Extra Code Coverage@0.0.14-0": "04t6g000008b0i4AAA",
         "Apex Rollup - Nebula Logger": "0Ho6g000000Gn8PCAS",
-        "Apex Rollup - Nebula Logger@0.0.6-0": "04t6g000008SiisAAC",
         "Apex Rollup - Nebula Logger@0.0.7-0": "04t6g000008b0O7AAI",
+        "Apex Rollup - Nebula Logger@0.0.8-0": "04t6g000007zM6tAAE",
         "Apex Rollup - Rollup Callback": "0Ho6g000000GnA1CAK",
         "Apex Rollup - Rollup Callback@0.0.2-0": "04t6g000008ShztAAC",
         "Apex Rollup - Rollup Callback@0.0.3-0": "04t6g000008Sis0AAC",
         "Nebula Logger - Core@4.8.0-NEXT-ignore-origin-method": "04t5Y0000015lslQAA",
         "apex-rollup": "0Ho6g000000TNcOCAW",
-        "apex-rollup@1.5.27-0": "04t6g000008b0iTAAQ",
-        "apex-rollup@1.5.28-0": "04t6g000008b0inAAA",
-        "apex-rollup@1.5.29-0": "04t6g000008b0nFAAQ",
-        "apex-rollup@1.5.30-0": "04t6g000007zLnjAAE",
-        "apex-rollup@1.5.31-0": "04t6g000007zLpGAAU",
-        "apex-rollup@1.5.32-0": "04t6g000007zLuvAAE",
         "apex-rollup@1.5.33-0": "04t6g000007zLvtAAE",
         "apex-rollup@1.5.34-0": "04t6g000007zLxGAAU",
-        "apex-rollup@1.5.35-0": "04t6g000007zM2bAAE"
+        "apex-rollup@1.5.35-0": "04t6g000007zM2bAAE",
+        "apex-rollup@1.5.36-0": "04t6g000007zM78AAE"
     }
 }
