--- a/sfdx-project.json
+++ b/sfdx-project.json
@@ -4,8 +4,8 @@
             "default": true,
             "package": "apex-rollup",
             "path": "rollup",
-            "versionName": "Making Rollup.flatten() safer",
-            "versionNumber": "1.5.39.0",
+            "versionName": "Logging updates to respect specific Rollup Controls when they differ from the Org Default",
+            "versionNumber": "1.5.40.0",
             "versionDescription": "Fast, configurable, elastically scaling custom rollup solution. Apex Invocable action, one-liner Apex trigger/CMDT-driven logic, and scheduled Apex-ready.",
             "releaseNotesUrl": "https://github.com/jamessimone/apex-rollup/releases/latest",
             "unpackagedMetadata": {
@@ -105,6 +105,7 @@
         "apex-rollup@1.5.36-0": "04t6g000007zM78AAE",
         "apex-rollup@1.5.37-0": "04t6g000007zMCdAAM",
         "apex-rollup@1.5.38-0": "04t6g000008fjOcAAI",
-        "apex-rollup@1.5.39-0": "04t6g000008fjSFAAY"
+        "apex-rollup@1.5.39-0": "04t6g000008fjSFAAY",
+        "apex-rollup@1.5.40-0": "04t6g000008fjSUAAY"
     }
 }
